# yolov8-triton-ensemble

./: README.md
clients/: main.py
clients/cpp-client/: CMakeLists.txt  main.cpp
clients/cpp-client/triton/: triton.cpp  triton.h
clients/cpp-client/yolo/: yolo.cpp  yolo.h
